zokrates_cli/examples/compile_errors/variable_constant_lt.zok
from "EMBED" import bit_array_le

// Unpack a field element as N big endian bits
def main(bool[1] a, bool[1] b) -> bool:
    return bit_array_le::<1>(a, b)